<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main.xml"
    app:startDestination="@id/eventsListFragment">

    <fragment
        android:id="@+id/eventsListFragment"
        android:name="com.francisco.sid.ui.fragment.EventsListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_events_list">
        <action
            android:id="@+id/action_eventsListFragment_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.francisco.sid.ui.fragment.EventDetailsFragment"
        android:label="@string/details_title"
        tools:layout="@layout/fragment_event_details">
        <argument
            android:name="event"
            app:argType="com.francisco.sid.data.model.Event" />
        <action
            android:id="@+id/action_eventDetailsFragment_to_checkinFormFragment"
            app:destination="@id/checkinFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkinFormFragment"
        android:name="com.francisco.sid.ui.fragment.CheckinFormFragment"
        android:label="@string/checkin_title"
        tools:layout="@layout/fragment_checkin_form">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
</navigation>