<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.text.TextUtils"/>

        <variable
            name="viewModel"
            type="com.francisco.sid.viewmodel.CheckinViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_small">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@null"
                android:hint="@string/name_hint"
                app:error="@{viewModel.nameErrorLiveEvent}"
                app:errorEnabled="@{!TextUtils.isEmpty(viewModel.nameErrorLiveEvent)}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.nameLiveEvent}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@null"
                android:hint="@string/email_hint"
                app:error="@{viewModel.emailErrorLiveEvent}"
                app:errorEnabled="@{!TextUtils.isEmpty(viewModel.emailErrorLiveEvent)}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={viewModel.emailLiveEvent}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCheckin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/checkin"
                android:background="@drawable/background_rounded"
                android:onClick="@{() -> viewModel.validateFields()}"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>